--- a/templates/footer.html
+++ b/templates/footer.html
@@ -56,7 +56,7 @@
                              <p>Heaven fruitful doesn't over lesser in days. Appear creeping.</p>
                          </div>
                          <!-- Form -->
-                         <div class="footer-form" >
+                         <!-- <div class="footer-form" >
                              <div id="mc_embed_signup">
                                  <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                  method="get" class="subscribe_form relative mail_part">
@@ -70,7 +70,7 @@
                                      <div class="mt-10 info"></div>
                                  </form>
                              </div>
-                         </div>
+                         </div> -->
                         </div>
                     </div>
                 </div>
