--- a/templates/job/manage_jobs.html
+++ b/templates/job/manage_jobs.html
@@ -102,21 +102,19 @@
                         <ul class="pagination justify-content-start">
                             {% if page_obj.has_previous %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}">
                                     <span class="ti-angle-left"></span>
                                 </a>
                             </li>
                             {% endif %}
-                            
                             {% for i in page_obj.paginator.page_range %}
-                                <li class="page-item {% if i == page_obj.number %}active{% endif %}">
-                                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                                </li>
+                            <li class="page-item {% if i == page_obj.number %}active{% endif %}">
+                                <a class="page-link" href="?page={{ i }}&{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}">{{ i }}</a>
+                            </li>
                             {% endfor %}
-                            
                             {% if page_obj.has_next %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}&{% for key, value in request.GET.items %}{% if key != 'page' %}{{ key }}={{ value }}&{% endif %}{% endfor %}">
                                     <span class="ti-angle-right"></span>
                                 </a>
                             </li>
